    - Added the obligatory assembling machine 4! it has a crafting speed of 1.75, with 6 module slots and the same amount of pipes.
    - Added a MK2 version of the Circuit Megassembler, which has double the crafting speed and has an innate productivity boost - but takes light lubricant.
    - Added new tech icons for different tiers in the bio-module technologies.

  Changes:
    - Slightly nerfed research productivity.
    - Changed barium nitrate to use nitric acid.
    - Moved naptha steam cracking into A-ATM.
    - Rerendered and slightly remodelled heating/cooling plating.
    - Moved artillery into metalloid science.
    - Buffed artillery shell AOE size from 4 to 6.
    - Changed stack size of artillery shells from 1 to 2.
    - Changed phosphorous to be behind R-NM science, and be part of its ingredients.
    - Moved lead into its own technology, and moved it to behind P-TM science.
    - Completely rebalanced P-TM sciences recipe and ingredients.
    - Removed basic wiring, and replaced all recipes that used it with tier-appropiate wiring.
    - Removed mini motors, this is to help make setting up early-game malls easier. (no more tally hall in the mini motor mall :pensive:)
    - Changed all logistic chests to take stainless steel chests instead of steel chests, but buffed their storage size to 64.
    - Slightly scaled down the HCl/acidic water/chromic acid icons in metal processing recipes.
    - Increased the stack size of all billets from 100 to 500.

  Fixes:
    - Fixed the tech icons of all battery equipment.
    - Fixed module tiers not taking the right amount of circuits.

---------------------------------------------------------------------------------------------------
Version: 0.6.514
Date: 2025-31-07
  The i'll be able to sit down one day and not have to update the public build Update:

  Changes:
    - Changed P-TM science to use thallium plates, not ore to match with tungsten/titanium.