@@ -22,6 +22,7 @@ Date: 2025-12-07
     - Added the obligatory assembling machine 4! it has a crafting speed of 1.75, with 6 module slots and the same amount of pipes.
     - Added a MK2 version of the Circuit Megassembler, which has double the crafting speed and has an innate productivity boost - but takes light lubricant.
     - Added new tech icons for different tiers in the bio-module technologies.
+    - Added even more advanced recipes for thing that take lubricant, for light lubricant.
 
   Changes:
     - Slightly nerfed research productivity.
